i am ashamed of myself.

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1 id="text"></h1>
-        <button onclick="buttonClicked()">Press me!</button>
+        <button onclick="buttonPressed()">Press me!</button>
         <script src="./index.js"></script>
     </body>
 </html>
