--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html></html>
 
-<title>SUOMISIVU 2.0</title>
+<title>valopaa.tk</title>
 
 </head><body style="background-color: lawngreen;">
 
@@ -13,11 +13,11 @@
 <script>
 
 setInterval(function() {
-    document.body.style.backgroundColor="blue" 
+    document.body.style.backgroundColor="yellow" 
     document.body.style.color="white"
     setTimeout(function(){
      document.body.style.backgroundColor="white" 
-     document.body.style.color="blue"
+     document.body.style.color="yellow"
  },50)
 }, 100)
 
